# syuwa-nihongo-daijiten-extractor

./: .gitignore  notes.md  pyproject.toml  readme.md  test.py
